Add appendix for beginner thread states lab